# sql-set-2form

./: AUTHORS  LICENSE  README  README.md  sql.cabal
src/: SqlTable.hs  sql.hs  sql.sh
testsuite/: sqlTest.hs
